Ajustes gerais de Responsividade.
Ajustes gerais de Responsividade na página.

--- a/styles.css
+++ b/styles.css
@@ -88,7 +88,7 @@ section#about div.about { flex-direction: column; text-align: center; max-width:
 section#about div.about h1.section_title { font-size: 2.6rem; }
 section#about div.about p.col_right_description { padding: 0px 30px; font-weight: 400; margin-bottom: 50px; }
 section#about div.about p.col_right_description span.description_span { color: #29323C; font-weight: 700; }
-section#about div.about div.col_right div.testimonials_row { display: flex; flex-wrap: wrap; justify-content: center; }
+section#about div.about div.col_right div.testimonials_row { display: flex; flex-wrap: wrap; justify-content: center; max-width: 1500px; margin: 0px auto; }
 section#about div.about div.col_right div.testimonials_row div.testimonials_col { flex: 100%; max-width: 100%; padding: 30px; }
 section#about div.about div.col_right div.testimonials_row div.testimonials_col div.testimonial { background-color: #B1BECD; padding: 30px; border-radius: 15px; box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.2); position: relative; z-index: -1; overflow: hidden; }
 section#about div.about div.col_right div.testimonials_row div.testimonials_col div.testimonial::after { content: ''; position: absolute; left: 0px; top: 0px; width: 100%; height: 225px; background-image: linear-gradient(-45deg, #485563 40%, #29323C 140%); z-index: 1; }
@@ -98,7 +98,7 @@ section#about div.about div.col_right div.testimonials_row div.testimonials_col 
 section#about div.about div.col_right div.testimonials_row div.testimonials_col div.testimonial div.client_name { font-size: 1.5rem; font-weight: 500; color: #B1BECD; text-transform: uppercase; margin: 15px 0px; position: relative; z-index: 2; }
 section#about div.about div.col_right div.testimonials_row div.testimonials_col div.testimonial div.client_evaluation_note { color: #496D96; margin-top: 0px; margin-bottom: 20px; position: relative; z-index: 2; font-size: 1.7rem; }
 section#about div.about div.col_right div.testimonials_row div.testimonials_col div.testimonial p.client_evaluation_testimonial { text-align: justify; margin-top: 40px; padding: 0px; color: #29323C; font-weight: 500; }
-section#about div.about div.col_left { width: 200px; height: auto; margin-top: 50px; }
+section#about div.about div.col_left { width: 200px; height: auto; margin-top: 80px; }
 section#about div.about div.col_left div.company_logo { height: 100%; width: 100%; position: relative; }
 /* End About Section */
 /* Contact Section */
@@ -214,7 +214,7 @@ section#footer div.footer p span.footer_span { color: #496D96; }
     section#hero div.hero div.middle { position: absolute; left: 50%; top: 90%; transform: translate(-50%, -90%); }
     section#hero div.hero div.middle div.mouse { border: 2px solid #29323C; border-radius: 25px; cursor: pointer; }
     section#hero div.hero div.middle div.mouse::before { width: 10px; height: 10px; left: 25px; }
-        @keyframes mouse_scroll { 0% { opacity: 0; transform: translateY(0) scale(0.5); } 10% { opacity: 1; transform: translateY(-23px) scale(1); } 100% { opacity: 0; transform: translateY(17px) scale(0.5); } }
+        @keyframes mouse_scroll { 0% { opacity: 0; transform: translateY(0) scale(0.5); } 10% { opacity: 1; transform: translateY(-23px) scale(1); } 100% { opacity: 0; transform: translateY(14px) scale(0.5); } }
     /* End Section Home */
     /* Services Section */
     section#services div.services div.service_top p { font-size: 2rem; }
@@ -228,11 +228,10 @@ section#footer div.footer p span.footer_span { color: #496D96; }
     section#projects div.projects div.all_projects div.project_item div.project_image img { transform: scale(0.75); }
     section#projects div.projects div.all_projects div.project_item:hover div.project_image img { transform: scale(0.65); }
     /* End Projects Section */
-
     /* About Section */
-
+    section#about div.about p.col_right_description { font-size: 2rem; }
+    section#about div.about div.col_right div.testimonials_row { flex-direction: row; flex-wrap: nowrap; }
     /* End About Section */
-    
     /* Contact Section */
     section#contact div.contact div p { font-size: 2rem; padding: 0px 40px; }
     section#contact div.contact { max-width: 1300px; flex-direction: column; padding: 100px 0px; align-items: center; justify-content: center; min-width: 20vh; }
