--- a/styles.css
+++ b/styles.css
@@ -52,10 +52,10 @@ section#hero div.hero div.middle div.mouse::before { content: ''; width: 15px; h
 /* End Hero Section */
 /* Services Section */
 section#services div.services div.service_top h1.section_title { font-size: 2.6rem; }
-section#services div.services { flex-direction: column; text-align: center; max-width: 1500px; margin: 0px auto; padding: 100px 0px; }
-section#services div.services div.service_top { max-width: 1300px; margin: 0px auto; }
+section#services div.services { flex-direction: column; text-align: center; max-width: 1400px; margin: 0px auto; padding: 100px 0px; border: 1px solid black; }
+section#services div.services div.service_top { max-width: 1400px; margin: 0px auto; border: 1px solid blue; }
 section#services div.services div.service_top p { padding: 0px 30px; font-weight: 400; }
-section#services div.services div.service_bottom { display: flex; align-items: center; justify-content: center; flex-wrap: wrap; margin-top: 50px; }
+section#services div.services div.service_bottom { display: flex; align-items: center; justify-content: center; flex-wrap: wrap; margin-top: 50px; max-width: 1300px; border: 1px solid red; }
 section#services div.services div.service_bottom div.service_item { flex-basis: 80%; display: flex; align-items: flex-start; justify-content: center; flex-direction: column; background-image: linear-gradient(60deg, #485563 50%, #29323C 100%); box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.2); padding: 10px; border-radius: 15px; margin: 10px 5%; position: relative; z-index: 1; overflow: hidden; }
 section#services div.services div.service_bottom div.service_item p.service_item_text { color: #B1BECD;  font-size: 1.3rem; line-height: 2rem; font-weight: 500; text-align: left; margin-bottom: 15px; }
 section#services div.services div.service_bottom div.service_item p.service_item_text span.service_text_span { color: #496D96; font-weight: 700; }
@@ -70,10 +70,10 @@ section#services div.services div.service_bottom div.service_item h2 { font-size
 /* End Services Section */
 /* Projects Section */
 section#projects div.projects div.projects_header h1.section_title { font-size: 2.6rem; }
-section#projects div.projects div.projects_header { max-width: 1300px; margin: 0px auto; }
+section#projects div.projects div.projects_header { max-width: 1400px; margin: 0px auto; border: 1px solid blue; }
 section#projects div.projects div.projects_header p { padding: 0px 30px; font-weight: 400; }
-section#projects div.projects { flex-direction: column; max-width: 1400px; margin: 0px auto; padding: 100px 0px; }
-section#projects div.projects div.all_projects { display: flex; align-items: center; justify-content: center; flex-direction: column; margin-top: 50px; }
+section#projects div.projects { flex-direction: column; max-width: 1400px; margin: 0px auto; padding: 100px 0px; border: 1px solid black; }
+section#projects div.projects div.all_projects { display: flex; align-items: center; justify-content: center; flex-direction: column; margin-top: 50px; border: 1px solid red; }
 section#projects div.projects div.all_projects div.project_item { display: flex; align-items: center; justify-content: center; flex-direction: column; width: 80%; margin: 20px auto; overflow: hidden; border-radius: 15px; box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.2); }
 section#projects div.projects div.all_projects div.project_item div.project_info { padding: 10px; flex-basis: 50%; height: 100%; display: flex; align-items: flex-start; justify-content: center; flex-direction: column; background-image: linear-gradient(-60deg, #485563 50%, #29323C 100%); }
 section#projects div.projects div.all_projects div.project_item div.project_info h1 { font-size: 1.6rem; font-weight: 700; margin-left: 15px; margin-top: 15px; margin-bottom: 15px; text-transform: uppercase; color: #496D96; }
@@ -84,10 +84,11 @@ section#projects div.projects div.all_projects div.project_item div.project_imag
 section#projects div.projects div.all_projects div.project_item:hover div.project_image img { transform: scale(0.9); }
 /* End Projects Section */
 /* About Section */
-section#about div.about { flex-direction: column; text-align: center; max-width: 1300px; margin: 0 auto; padding: 100px 0px; }
+section#about div.about { flex-direction: column; text-align: center; max-width: 1400px; margin: 0px auto; padding: 100px 0px; border: 1px solid black; }
 section#about div.about h1.section_title { font-size: 2.6rem; }
-section#about div.about p.col_right_description { padding: 0px 30px; font-weight: 400; margin-bottom: 50px; }
+section#about div.about p.col_right_description { padding: 0px 30px; font-weight: 400; max-width: 1400px; border: 1px solid blue; }
 section#about div.about p.col_right_description span.description_span { color: #29323C; font-weight: 700; }
+section#about div.about div.col_right { max-width: 1300px; margin-top: 50px; border: 1px solid red; }
 section#about div.about div.col_right div.testimonials_row { display: flex; flex-wrap: wrap; justify-content: center; max-width: 1500px; margin: 0px auto; }
 section#about div.about div.col_right div.testimonials_row div.testimonials_col { flex: 100%; max-width: 100%; padding: 30px; }
 section#about div.about div.col_right div.testimonials_row div.testimonials_col div.testimonial { background-color: #B1BECD; padding: 30px; border-radius: 15px; box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.2); position: relative; z-index: -1; overflow: hidden; }
@@ -103,10 +104,10 @@ section#about div.about div.col_left div.company_logo { height: 100%; width: 100
 /* End About Section */
 /* Contact Section */
 section#contact div.contact div h1.section_title { font-size: 2.6rem; }
-section#contact div.contact { flex-direction: column; max-width: 1500px; margin: 0px auto; }
-section#contact div.contact div p { max-width: 1300px; padding: 0px 30px; font-weight: 400; }
+section#contact div.contact { flex-direction: column; max-width: 1400px; margin: 0px auto; border: 1px solid black; }
+section#contact div.contact div p { max-width: 1400px; padding: 0px 30px; font-weight: 400; border: 1px solid blue; }
 section#contact div.contact div p span.contact_span { color: #29323C; font-weight: 700; }
-section#contact div.contact div.contact_items { min-width: 320px; margin: 50px auto; display: flex; flex-direction: column; justify-content: center; align-items: center; }
+section#contact div.contact div.contact_items { min-width: 320px; margin: 50px auto; display: flex; flex-direction: column; justify-content: center; align-items: center; border: 1px solid red; }
 section#contact div.contact div.contact_items div.contact_item { min-width: 250px; min-height: 250px; padding: 20px; text-align: center; border-radius: 10px; padding: 30px; margin: 30px; display: flex; justify-content: center; align-items: center; flex-direction: column; box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.2); transition: 0.3s ease; transition-property: box-shadow; background-color: #B1BECD; position: relative; z-index: -1; overflow: hidden; transform: scale(1); transition-property: box-shadow, transform; }
 section#contact div.contact div.contact_items div.contact_item::after { content: ''; position: absolute; left: 0px; top: -20px; height: 100%; width: 100%; clip-path: circle(180px at center 0); background-image: linear-gradient(60deg, #485563 50%, #29323C 100%); opacity: 0.8; z-index: -1;  }
 section#contact div.contact div.contact_items a:hover div.contact_item { box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2); transform: scale(0.95); }
@@ -181,7 +182,7 @@ section#footer div.footer p span.footer_span { color: #496D96; }
     /* About Section */
     section#about div.about h1.section_title { font-size: 4rem; }
     section#about div.about p.col_right_description { font-size: 1.6rem; padding: 0px 40px; }
-    section#about div.about div.col_right div.testimonials_row div.testimonials_col { flex-basis: 45%; max-width: 45%; margin: 2%; }
+    section#about div.about div.col_right div.testimonials_row div.testimonials_col { flex-basis: 45%; min-width: 45%; margin: 2%; }
     section#about div.about div.col_left { width: 600px; height: 400px; }
     section#about div.about div.col_left { width: 300px; height: auto; margin-top: 50px; }
     /* End About Section */
@@ -207,7 +208,7 @@ section#footer div.footer p span.footer_span { color: #496D96; }
     section#header div.header div.nav_bar div.nav_list ul li:hover a { font-size: 1.9rem; color: #29323C; background-color: #B1BECD; border-radius: 10px; transform: scale(0.80); }
     section#header div.header div.nav_bar div.nav_list ul li a.active { font-size: 1.9rem; color: #29323C; background-color: #B1BECD; border-radius: 10px; transform: scale(0.80); }
     section#header div.header div.nav_bar div.nav_list div.hamburger { display: none; }
-    section#header div.header div.progress_bar { height: 5px; transition: 0.3s ease; transition-delay: 0.1s; }
+    section#header div.header div.progress_bar { height: 10px; transition: 0.3s ease; transition-delay: 0.1s; }
     /* End Main Header Menu */
     /* Section Home */
     section#hero div.hero div.page_fold { height: 650px; width: 650px; position: absolute; top: 83px; right: 0px; background-image: url(./vectors/Page-Turner.svg); background-repeat: no-repeat; transform: rotate(90deg); background-size: 100%; z-index: -1; }
@@ -230,11 +231,13 @@ section#footer div.footer p span.footer_span { color: #496D96; }
     /* End Projects Section */
     /* About Section */
     section#about div.about p.col_right_description { font-size: 2rem; }
+    section#about div.about div.col_right { padding: 17px; }
     section#about div.about div.col_right div.testimonials_row { flex-direction: row; flex-wrap: nowrap; }
+    section#about div.about div.col_right div.testimonials_row div.testimonials_col { flex-basis: 35%; min-width: 35%; margin: 0%; }
     /* End About Section */
     /* Contact Section */
     section#contact div.contact div p { font-size: 2rem; padding: 0px 40px; }
-    section#contact div.contact { max-width: 1300px; flex-direction: column; padding: 100px 0px; align-items: center; justify-content: center; min-width: 20vh; }
+    section#contact div.contact { flex-direction: column; padding: 100px 0px; align-items: center; justify-content: center; min-width: 20vh; }
     section#contact div.contact div.contact_items { width: 100%; display: flex; flex-direction: row; justify-content: space-evenly; align-items: center; margin: 50px; }
     /* End Contact Section */
     /* Footer Section */
