--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ section#header div.header div.nav_bar div.nav_list div.hamburger div.bar::after 
 section#header div.header div.nav_bar div.nav_list div.hamburger div.bar::before { bottom: 8px; }
 section#header div.header div.nav_bar div.nav_list div.hamburger.active div.bar::before { bottom: 0px; }
 section#header div.header div.nav_bar div.nav_list div.hamburger.active div.bar::after { top: 0px; }
-//section#header div.header div.progress_bar { background-color: #29323C; height: 10px; width: 0; position: fixed; left: 0px; bottom: 0px; }
+section#header div.header div.progress_bar { background-color: #29323C; height: 10px; width: 0; position: fixed; left: 0px; bottom: 0px; }
 /* End Main Header Menu */
 /* Hero Section */
 section#hero div.hero { max-width: 1200px; margin: 0px auto; padding: 0px 50px; justify-content: flex-start; }
@@ -121,7 +121,7 @@ section#contact div.contact div.contact_items div.contact_item div.contact_info 
 /* Footer Section */
 section#footer {background-color: #B1BECD; display: flex; flex-direction: column; }
 section#footer div.emblem { width: 150px; height: 150px; margin: auto; background-image: url('./images/jpgobbi_logo_withoutbg_cropped.png'); background-repeat: no-repeat; background-position: center; background-size: 100%; position: absolute; bottom: 0px; z-index: 3; margin-bottom: 30px; }
-section#footer div.footer { min-height: 300px; flex-direction: column; position: relative; z-index: 1;}
+section#footer div.footer { min-height: 300px; flex-direction: column; position: relative; z-index: 1; justify-content: center; align-items: center;}
 section#footer div.footer::after { content: ''; width: 100%; height: 40%; background-color: #29323C; position: absolute; bottom: 0px; border-top-left-radius: 20px; border-top-right-radius: 20px; z-index: 2; box-shadow: 0px -15px 30px rgba(0, 0, 0, 0.3); }
 section#footer div.footer div.brand { position: absolute; top: 20px; text-align: center; }
 section#footer div.footer div.brand h1.brand_title { color: #29323C; margin-bottom: 10px; }
@@ -197,8 +197,8 @@ section#footer div.footer div.social_media { width: 50px; height: 50px; backgrou
     section#contact div.contact div.contact_items { margin-top: 70px; flex-direction: row; flex-wrap: wrap; }
     /* End Contact Section */
     /* Footer Section */
-    //section#footer div.emblem { width: 200px; height: 200px; right: 0px; margin-right: 50px; bottom: 0px; margin-bottom: 50px; }
-    //section#footer div.footer::after { width: 40%; height: 100%; right: 0px; border-radius: 0; border-top-left-radius: 20px; border-bottom-left-radius: 20px; }
+    section#footer div.footer { min-height: 320px; }
+    section#footer div.footer::after { height: 35%; }
     /* End Footer Section */
 }
 /* End Media Query For Tablet */
