--- a/styles.css
+++ b/styles.css
@@ -73,14 +73,15 @@ section#projects div.projects div.projects_header h1.section_title { font-size: 
 section#projects div.projects div.projects_header { max-width: 1400px; margin: 0px auto; }
 section#projects div.projects div.projects_header p { padding: 0px 30px; font-weight: 400; }
 section#projects div.projects div.projects_header p span.projects_description_span { color: #29323C; font-weight: 700; }
-section#projects div.projects { flex-direction: column; max-width: 1400px; margin: 0px auto; padding: 100px 0px; }
-section#projects div.projects div.all_projects { display: flex; align-items: center; justify-content: center; flex-direction: column; margin-top: 50px; }
+section#projects div.projects { flex-direction: column; max-width: 1400px; margin: 0px auto; padding: 100px 0px;  }
+section#projects div.projects div.all_projects { display: flex; align-items: center; justify-content: center; flex-direction: column; margin-top: 50px; background: transparent; }
 section#projects div.projects div.all_projects div.project_item { display: flex; align-items: center; justify-content: center; flex-direction: column; width: 80%; margin: 20px auto; overflow: hidden; border-radius: 20px; box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.2); }
-section#projects div.projects div.all_projects div.project_item div.project_info { padding: 10px; flex-basis: 50%; height: 100%; display: flex; align-items: flex-start; justify-content: center; flex-direction: column; background-image: linear-gradient(-60deg, #485563 50%, #29323C 100%); }
-section#projects div.projects div.all_projects div.project_item div.project_info h1 { font-size: 1.6rem; font-weight: 700; margin-left: 15px; margin-top: 15px; margin-bottom: 15px; text-transform: uppercase; color: #496D96; }
-section#projects div.projects div.all_projects div.project_item div.project_info p {font-weight: 500; font-size: 1.3rem; color: #B1BECD; line-height: 2.3rem; text-align: left; margin-bottom: 15px; }
+section#projects div.projects div.all_projects div.project_item div.project_info { padding: 10px; flex-basis: 50%; height: 100%; display: flex; align-items: flex-start; justify-content: center; flex-direction: column; background-color: #485563; }
+section#projects div.projects div.all_projects div.project_item div.project_info h1 { font-size: 1.5rem; font-weight: 700; margin-left: 15px; margin-top: 15px; margin-bottom: 15px; text-transform: uppercase; color: #29323C; background-color: #B1BECD; padding: 15px; border-radius: 10px; margin-left: auto; margin-right: auto; box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2); }
+section#projects div.projects div.all_projects div.project_item div.project_info p { font-weight: 500; font-size: 1.3rem; color: #B1BECD; line-height: 2.3rem; text-align: left; margin-bottom: 15px; }
 section#projects div.projects div.all_projects div.project_item div.project_info p span { color: #496D96; font-weight: 700; }
-section#projects div.projects div.all_projects div.project_item div.project_image { flex-basis: 50%; height: 300px; width: 100%; overflow: hidden; position: relative; background-color: #B1BECD; padding: 20px; display: flex; justify-content: center; align-items: center; }
+section#projects div.projects div.all_projects div.project_item div.project_image { flex-basis: 50%; height: 300px; width: 100%; overflow: hidden; position: relative; background-color: #B1BECD; padding: 20px; display: flex; justify-content: center; align-items: center; position: relative; z-index: 1; }
+section#projects div.projects div.all_projects div.project_item div.project_image::after { content: ''; width: 100%; height: 40%; background-color: #485563; position: absolute; left: 0px; top: 0px; z-index: -1; border-bottom-left-radius: 100px; box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.3); }
 section#projects div.projects div.all_projects div.project_item div.project_image img { transition: 0.3s ease; transition-property: transform; width: 90%; height: auto; transform: scale(1.1); }
 section#projects div.projects div.all_projects div.project_item:hover div.project_image img { transform: scale(0.9); }
 /* End Projects Section */
@@ -110,13 +111,13 @@ section#contact div.contact div p { max-width: 1400px; padding: 0px 30px; font-w
 section#contact div.contact div p span.contact_span { color: #29323C; font-weight: 700; }
 section#contact div.contact div.contact_items { max-width: 1300px; min-width: 320px; margin: 50px auto; display: flex; flex-direction: column; justify-content: center; align-items: center; }
 section#contact div.contact div.contact_items div.contact_item { min-width: 250px; min-height: 250px; padding: 20px; text-align: center; border-radius: 20px; padding: 30px; margin: 30px; display: flex; justify-content: center; align-items: center; flex-direction: column; box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.2); transition: 0.3s ease; transition-property: box-shadow; background-color: #B1BECD; position: relative; z-index: -1; overflow: hidden; transform: scale(1); transition-property: box-shadow, transform; }
-section#contact div.contact div.contact_items div.contact_item::after { content: ''; position: absolute; left: 0px; top: 0px; height: 60%; width: 100%; background-image: linear-gradient(60deg, #485563 50%, #29323C 100%); border-bottom-left-radius: 30px; box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.3); opacity: 0.8; z-index: -1;  }
+section#contact div.contact div.contact_items div.contact_item::after { content: ''; position: absolute; left: 0px; top: 0px; height: 60%; width: 100%; background-image: linear-gradient(60deg, #485563 50%, #29323C 100%); border-bottom-right-radius: 100px; box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.3); opacity: 0.8; z-index: -1;  }
 section#contact div.contact div.contact_items a:hover div.contact_item { box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2); transform: scale(0.95); }
 section#contact div.contact div.contact_items div.contact_item div.icon { width: 70px; margin: 0 auto; margin-bottom: 10px; transition: 0.3s ease; transition-property: transform; }
 section#contact div.contact div.contact_items a:hover div.contact_item div.icon { transform: scale(1.25); }
-section#contact div.contact div.contact_items div.contact_item div.contact_info h1 { font-size: 2rem; font-weight: 500; color: #29323C; margin-bottom: 40px; text-transform: uppercase; }
-section#contact div.contact div.contact_items div.contact_item div.contact_info h2 { font-size: 1.5rem; line-height: 2rem; text-transform: uppercase; font-weight: 500; color: #496D96;; }
-section#contact div.contact div.contact_items div.contact_item div.contact_info h3 { font-size: 1.5rem; color: #29323C; margin-top: 10px; }
+section#contact div.contact div.contact_items div.contact_item div.contact_info h1 { font-size: 2rem; font-weight: 500; color: #B1BECD; margin-bottom: 40px; text-transform: uppercase; }
+section#contact div.contact div.contact_items div.contact_item div.contact_info h2 { font-size: 1.5rem; line-height: 2rem; text-transform: uppercase; font-weight: 700; color: #496D96;; }
+section#contact div.contact div.contact_items div.contact_item div.contact_info h3 { font-size: 1.5rem; color: #29323C; font-weight: 500; margin-top: 10px; }
 /* End Contact Section */
 /* Footer Section */
 section#footer {background-color: #B1BECD; display: flex; flex-direction: column; }
@@ -169,7 +170,7 @@ section#footer div.footer div.social_media { width: 50px; height: 50px; backgrou
     section#projects div.projects div.projects_header h1.section_title { font-size: 4rem; }
     section#projects div.projects div.projects_header p { font-size: 1.6rem; padding: 0px 40px;}
     section#projects div.projects div.all_projects { padding: 20px; background-color: transparent; }
-    section#projects div.projects div.all_projects div.project_item { flex-direction: row; border-radius: 0px; background: transparent; border-radius: 0px; }
+    section#projects div.projects div.all_projects div.project_item { flex-direction: row; background: transparent; border-radius: 0px; }
     section#projects div.projects div.all_projects div.project_item:nth-child(even) { flex-direction: row-reverse; }
     section#projects div.projects div.all_projects div.project_item { height: 100%; margin: 0px; width: 100%; }
     section#projects div.projects div.all_projects div.project_item.upleft_border { border-top-left-radius: 15px; }
@@ -231,7 +232,7 @@ section#footer div.footer div.social_media { width: 50px; height: 50px; backgrou
     section#projects div.projects div.projects_header p { font-size: 2rem; }
     section#projects div.projects div.all_projects div.project_item div.project_info h1 { font-size: 2.5rem; } 
     section#projects div.projects div.all_projects div.project_item div.project_info p { font-size: 1.7rem; line-height: 2.5rem; }
-    section#projects div.projects div.all_projects div.project_item div.project_image img { transform: scale(0.75); }
+    section#projects div.projects div.all_projects div.project_item div.project_image img { transform: scale(0.75); box-shadow: none; }
     section#projects div.projects div.all_projects div.project_item:hover div.project_image img { transform: scale(0.65); }
     /* End Projects Section */
     /* About Section */
