--- a/styles.css
+++ b/styles.css
@@ -106,7 +106,7 @@ section#about div.about div.col_left div.company_logo { height: 100%; width: 100
 /* End About Section */
 /* Contact Section */
 section#contact div.contact div h1.section_title { font-size: 2.6rem; }
-section#contact div.contact { flex-direction: column; max-width: 1400px; margin: 0px auto; }
+section#contact div.contact { flex-direction: column; max-width: 1400px; margin: 0px auto; margin-bottom: 50px; }
 section#contact div.contact div p { max-width: 1400px; padding: 0px 30px; font-weight: 400;  }
 section#contact div.contact div p span.contact_span { color: #29323C; font-weight: 700; }
 section#contact div.contact div.contact_items { max-width: 1300px; min-width: 320px; margin: 50px auto; display: flex; flex-direction: column; justify-content: center; align-items: center; }
@@ -120,18 +120,18 @@ section#contact div.contact div.contact_items div.contact_item div.contact_info 
 section#contact div.contact div.contact_items div.contact_item div.contact_info h3 { font-size: 1.5rem; color: #29323C; font-weight: 500; margin-top: 10px; }
 /* End Contact Section */
 /* Footer Section */
-section#footer {background-color: #B1BECD; display: flex; flex-direction: column; }
-section#footer div.emblem { width: 150px; height: 150px; margin: auto; background-image: url('./images/jpgobbi_logo_withoutbg_cropped.png'); background-repeat: no-repeat; background-position: center; background-size: 100%; position: absolute; bottom: 0px; z-index: 3; margin-bottom: 30px; }
-section#footer div.footer { min-height: 300px; flex-direction: column; position: relative; z-index: 1; justify-content: center; align-items: center;}
-section#footer div.footer::after { content: ''; width: 100%; height: 40%; background-color: #29323C; position: absolute; bottom: 0px; border-top-left-radius: 20px; border-top-right-radius: 20px; z-index: 2; box-shadow: 0px -15px 30px rgba(0, 0, 0, 0.3); }
-section#footer div.footer div.brand { position: absolute; top: 20px; text-align: center; }
-section#footer div.footer div.brand h1.brand_title { color: #29323C; margin-bottom: 10px; }
-section#footer div.footer div.brand h2.brand_subtitle { font-size: 0.8rem; font-weight: 700; letter-spacing: 0; color: #354B6C; text-transform: uppercase; margin-bottom: 20px; }
-section#footer div.footer div.brand h2.brand_subtitle span.brand_span { color: #29323C; font-weight: 700;}
-section#footer div.footer div.brand h3.company_address { font-size: 0.8rem; font-weight: 700; text-transform: uppercase; color: #496D96; margin-bottom: 15px; }
-section#footer div.footer div.brand h4.copyright { color: #29323C; font-size: 1rem; text-transform: uppercase; font-weight: 700; }
-section#footer div.footer div.brand h4.copyright span.copy_company { color: #354B6C; font-weight: 700; }
-section#footer div.footer div.social_media { width: 50px; height: 50px; background-image: url('./icons/facebook.svg'); background-repeat: no-repeat; background-position: center; position: absolute; bottom: 20px; right: 20px; z-index: 4; }
+section#footer {background-color: #29323C; display: flex; flex-direction: column; }
+section#footer div.emblem { width: 150px; height: 150px; background-image: url('./images/jpgobbi_logo_withoutbg_cropped.png'); background-repeat: no-repeat; background-position: center; background-size: 100%; position: absolute; left: auto; top: -80px; margin: auto; z-index: 3; }
+section#footer div.footer { min-height: 160px; flex-direction: column; justify-content: center; align-items: center; position: relative; z-index: 1;}
+section#footer div.footer div.brand { position: absolute; top: 80px; text-align: center; margin: auto; }
+section#footer div.footer div.brand h1.brand_title { color: #496D96; margin-bottom: 10px; font-weight: 700; }
+section#footer div.footer div.brand h1.brand_title span.brand_span { color: #B1BECD; }
+section#footer div.footer div.brand h2.brand_subtitle { font-size: 0.8rem; text-transform: uppercase; font-weight: 700; color: #B1BECD; margin-bottom: 10px; }
+section#footer div.footer div.brand h2.brand_subtitle span.brand_span { color: #496D96; font-weight: 700; }
+section#footer div.footer div.brand h3.company_address { font-size: 0.8rem; color: #B1BECD; text-transform: uppercase; margin-bottom: 10px; }
+section#footer div.footer div.brand h4.copyright { font-size: 1rem; font-weight: 700; text-transform: uppercase; color: #B1BECD; margin-bottom: 10px; }
+section#footer div.footer div.brand h4.copyright span.copy_company { color: #496D96; }
+section#footer div.footer a.social_media_icon i { font-size: 5rem; position: absolute; top: 20px; right: 20px; color: #3B5998; }
 /* End Footer Section */
 /* General Keyframes */
     @keyframes hamburger_puls { 0% { opacity: 1; transform: scale(1); } 100% { opacity: 0; transform: scale(1.4); } }
