--- a/styles.css
+++ b/styles.css
@@ -79,7 +79,7 @@ section#projects div.projects div.all_projects div.project_item { display: flex;
 section#projects div.projects div.all_projects div.project_item div.project_info { padding: 10px; flex-basis: 50%; height: 100%; display: flex; align-items: flex-start; justify-content: center; flex-direction: column; background-color: #485563; }
 section#projects div.projects div.all_projects div.project_item div.project_info h1 { font-size: 1.5rem; font-weight: 700; margin-left: 15px; margin-top: 15px; margin-bottom: 15px; text-transform: uppercase; color: #29323C; background-color: #B1BECD; padding: 15px; border-radius: 10px; margin-left: auto; margin-right: auto; box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2); }
 section#projects div.projects div.all_projects div.project_item div.project_info p { font-weight: 500; font-size: 1.3rem; color: #B1BECD; line-height: 2.3rem; text-align: left; margin-bottom: 15px; }
-section#projects div.projects div.all_projects div.project_item div.project_info p span { color: #496D96; font-weight: 700; }
+section#projects div.projects div.all_projects div.project_item div.project_info p span { color: #29323C; font-weight: 700; }
 section#projects div.projects div.all_projects div.project_item div.project_image { flex-basis: 50%; height: 300px; width: 100%; overflow: hidden; position: relative; background-color: #B1BECD; padding: 20px; display: flex; justify-content: center; align-items: center; position: relative; z-index: 1; }
 section#projects div.projects div.all_projects div.project_item div.project_image::after { content: ''; width: 100%; height: 40%; background-color: #485563; position: absolute; left: 0px; top: 0px; z-index: -1; border-bottom-left-radius: 100px; box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.3); }
 section#projects div.projects div.all_projects div.project_item div.project_image img { transition: 0.3s ease; transition-property: transform; width: 90%; height: auto; transform: scale(1.1); }
@@ -98,7 +98,7 @@ section#about div.about div.col_right div.testimonials_row div.testimonials_col 
 section#about div.about div.col_right div.testimonials_row div.testimonials_col div.testimonial div.client_avatar { width: 200px; height: 100px; background-size: 100%; background-repeat: no-repeat; background-position: center; position: relative; z-index: 2; margin: auto; }
 section#about div.about div.col_right div.testimonials_row div.testimonials_col div.testimonial div.client_1 { background-image: url('./images/Logo_Fundo_Transp_png.png'); }
 section#about div.about div.col_right div.testimonials_row div.testimonials_col div.testimonial div.client_2 { background-image: url('./images/LogoNM.png'); }
-section#about div.about div.col_right div.testimonials_row div.testimonials_col div.testimonial div.client_name { font-size: 1.5rem; font-weight: 500; color: #B1BECD; text-transform: uppercase; margin: 15px 0px; position: relative; z-index: 2; }
+section#about div.about div.col_right div.testimonials_row div.testimonials_col div.testimonial div.client_name { font-size: 1.5rem; font-weight: 700; color: #B1BECD; text-transform: uppercase; margin: 15px 0px; position: relative; z-index: 2; }
 section#about div.about div.col_right div.testimonials_row div.testimonials_col div.testimonial div.client_evaluation_note { color: #29323C; margin-top: 0px; margin-bottom: 20px; position: relative; z-index: 2; font-size: 1.7rem; }
 section#about div.about div.col_right div.testimonials_row div.testimonials_col div.testimonial p.client_evaluation_testimonial { text-align: justify; margin-top: 40px; padding: 0px; color: #29323C; font-weight: 500; }
 section#about div.about div.col_left { width: 200px; height: auto; margin-top: 80px; }
@@ -182,6 +182,7 @@ section#footer div.footer a.social_media_icon i { font-size: 5rem; position: abs
     section#projects div.projects div.all_projects div.project_item div.project_info p { font-size: 1.5rem; line-height: 2.5rem; }
     section#projects div.projects div.all_projects div.project_item div.project_info.right p { text-align: right; }
     section#projects div.projects div.all_projects div.project_item div.project_image { height: 400px; display: flex; justify-content: center; align-items: center; }
+    section#projects div.projects div.all_projects div.project_item div.project_image::after { display: none; height: 100%; width: 50%; border-radius: 0px; //border-bottom-left-radius: 0px; //border-top-right-radius: 100px; //border-bottom-right-radius: 100px; }
     section#projects div.projects div.all_projects div.project_item div.project_image img { transition: 0.3s ease; transition-property: transform; width: 90%; height: auto; transform: scale(0.90); }
     section#projects div.projects div.all_projects div.project_item:hover div.project_image img { transform: scale(0.70); }
     /* End Projects Section */
